tests/ui/typeck/issue-43189.stderr
error[E0599]: no method named `a` found for unit type `()` in the current scope
  --> $DIR/issue-43189.rs:10:8
   |
LL |     ().a();
   |        ^ method not found in `()`
   |
  ::: $DIR/auxiliary/xcrate-issue-43189-a.rs:5:8
   |
LL |     fn a(&self) {}
   |        - the method is available for `()` here
   |
   = help: items from traits can only be used if the trait is in scope
help: the following trait is implemented but not in scope; perhaps add a `use` for it:
   |
LL | use xcrate_issue_43189_b::xcrate_issue_43189_a::A;
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
